--- a/savon-stephens-resume/index.html
+++ b/savon-stephens-resume/index.html
@@ -7,7 +7,7 @@
     <title>Savon Stephens Resume</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
+<body>
     <header>
         <h1 class="border">Savon <br> Stephens</h1>
     </header>
