--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1 class="border">Savon <br> Stephens</h1>
-    <img src="/images/savons-resume-picture.jpg " alt="picture of savon stephens">
+    <img src="savons-resume-picture.jpg" alt="picture of savon stephens">
     </header>
 
    <section 
